01_seq2seq code file

--- a/01_seq2seq/1 - Sequence to Sequence Learning with Neural Networks(빈칸).ipynb
+++ b/01_seq2seq/1 - Sequence to Sequence Learning with Neural Networks(빈칸).ipynb
@@ -459,11 +459,10 @@
    "source": [
     "class Encoder(nn.Module):\n",
     "    def __init__(self, input_dim, emb_dim, hid_dim, n_layers, dropout):\n",
-    "        \n",
+    "        #빈칸 채우기    \n",
     "        \n",
     "    def forward(self, src):\n",
-    "        \n",
-    "        return hidden, cell"
+    "        #빈칸 채우기"
    ]
   },
   {
@@ -504,11 +503,10 @@
    "source": [
     "class Decoder(nn.Module):\n",
     "    def __init__(self, output_dim, emb_dim, hid_dim, n_layers, dropout):\n",
-    "        \n",
+    "        #빈칸 채우기\n",
     "        \n",
     "    def forward(self, input, hidden, cell):\n",
-    "        \n",
-    "        return prediction, hidden, cell"
+    "        #빈칸 채우기"
    ]
   },
   {
@@ -571,12 +569,10 @@
    "source": [
     "class Seq2Seq(nn.Module):\n",
     "    def __init__(self, encoder, decoder, device):\n",
-    "        \n",
+    "        #빈칸 채우기\n",
     "        \n",
     "    def forward(self, src, trg, teacher_forcing_ratio = 0.5):\n",
-    "        \n",
-    "        \n",
-    "        return outputs"
+    "        #빈칸 채우기"
    ]
   },
   {
@@ -1013,7 +1009,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.8.5 (default, Sep  4 2020, 07:30:14) \n[GCC 7.3.0]"
   },
   "vscode": {
    "interpreter": {
